Removed custom font on the projects page so it doesn't make the header look different to other pages. Added background behind titles for edit pages. Changed old maroon labels on edit pages to black. #fix

--- a/portfolio/src/main/resources/static/styles/main.css
+++ b/portfolio/src/main/resources/static/styles/main.css
@@ -1,6 +1,5 @@
 /* Tag Changes */
 * {
-    font-family: 'Helvetica';
     box-sizing: inherit;
 }
 
